<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fabric_interfaces</name>
  <version>0.0.1</version>
  <description>
    Interfaces for the Framework for Automated Benchmarking of ROS Interprocess Communication
  </description>
  <maintainer email="josh@upower.com">Josh Whitley</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/upowerrobotics/ros2_fabric</url>
  <url type="bugtracker">https://github.com/upowerrobotics/ros2_fabric/issues</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
