<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fabric_nodes</name>
  <version>0.0.1</version>
  <description>
    Nodes for the Framework for Automated Benchmarking of ROS Interprocess Communication
  </description>
  <maintainer email="josh@upower.com">Josh Whitley</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/upowerrobotics/ros2_fabric</url>
  <url type="bugtracker">https://github.com/upowerrobotics/ros2_fabric/issues</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>fabric_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpy</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
